--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "type": "project",
   "autoload": {
     "psr-4": {
-      "tests\\": "tests/"
+      "Test\\": "tests/",
+      "Converter\\": "src/"
     }
   },
   "require": {
